# genpipeline

./: .gitignore  ACHIEVEMENTS.md  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PERFORMANCE_ANALYSIS.md  PROGRESS.md  README.md  README_GPU_FEM.md  REPO_ISSUES_AUDIT.md  ROADMAP.md  SUMMARY.md  benchmark_voxel.py  blackwell_compat.py  conftest.py  dashboard.py  dashboard_bo_runner.py  dashboard_state.py  dashboard_theme.py  dashboard_utils.py  eval_vae.py  fast_optimise.py  fem_data_pipeline.py  fembygen_pytorch_guide.md  freecad_bridge.py  live_viewer.py  main.py  materials.json  materials.yaml  optimization_engine.py  pipeline_config.json  pipeline_utils.py  plot_pareto.py  profile_results.txt  pyproject.toml  (+14 more)
cuda_kernels/: __init__.py  benchmark.py  fused_reparam_kernel.cu  gpu_marching_cubes.py  gpu_reparam.py  gpu_sparse_conv3d.py  gpu_voxelize.py  marching_cubes_kernel.cu  mc_benchmark.py  sparse_conv3d_kernel.cu
docs/: BENCHMARK_RESULTS.md  OPTIMIZATION_HISTORY.md
eval_results/: eval_report.json
fem/: data_pipeline.py  voxel_fem.py
fem_data/: BIMExample_mesh.stl  EngineBlock_mesh.stl  FEMExample_fem_results.json  FEMExample_mesh.stl  PartDesignExample_fem_results.json  PartDesignExample_mesh.stl  draft_test_objects_mesh.stl
fem_data_lbracket_test/: lbra_h15p0_r8p0_b29bc146_fem_results.json
fem_data_simp/: cant_v37_f1363_28x7x11_bca88aec_fem_results.json  cant_v37_f1363_28x7x11_bca88aec_mesh.stl  cant_v37_f837_28x11x9_799f8c6c_fem_results.json  (+11 more)
fem_variants/: fem_dataset.pt  (+25 more)
(+299 files in other folders)
